Solve the linear-gradient breaking issue on Safari
linear-gradient didn't have stops

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -13,7 +13,7 @@
 }
 
 .unicornButton {
-    background: linear-gradient(#ffffff50) border-box, var(--unicorn), #EED7FA;
+    background: linear-gradient(#ffffff50 0 0), var(--unicorn);
 }
 
 .unicornButton:hover {
